--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
 	<string name="app_name">creativeHub</string>
+	<string name="hide_password">Hide password</string>
+	<string name="show_password">Show password</string>
+	<string name="login">Login</string>
 </resources>
