--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
 	<string name="email">E-mail</string>
 	<string name="password">Password</string>
 	<string name="nickname">Nickname</string>
+	<string name="mapbox_access_token">YOUR_MAPBOX_ACCESS_TOKEN</string>
 </resources>
