--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,9 @@
 	<string name="password">Password</string>
 	<string name="nickname">Nickname</string>
 	<string name="mapbox_access_token">YOUR_MAPBOX_ACCESS_TOKEN</string>
+	<plurals name="available_copies">
+		<item quantity="zero">Sold</item>
+		<item quantity="one">One copy available</item>
+		<item quantity="other">%d copies available</item>
+	</plurals>
 </resources>
