--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,8 +12,8 @@
 	<string name="password">Password</string>
 	<string name="nickname">Nickname</string>
 	<string name="mapbox_access_token" translatable="false">YOUR_MAPBOX_ACCESS_TOKEN</string>
-	<string name="from_to_dates" formatted="true">From %s to %s</string>
-	<string name="interval_dates" formatted="true">%s - %s</string>
+	<string name="from_to_dates">From %s to %s</string>
+	<string name="interval_dates">%s - %s</string>
 	<plurals name="available_copies">
 		<item quantity="zero">Sold</item>
 		<item quantity="one">One copy available</item>
