--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
 	<string name="gcp_client_id" translatable="false">1035582852846-7d31c3v088hkm1uvpv0us1uvkot349s6.apps.googleusercontent.com</string>
+	<string name="maps_api_key" translatable="false">AIzaSyAbVsiSebFkwgvszM2-2SEnEpr3zaZr8yk</string>
 	<string name="app_name">creativeHub</string>
 	<string name="hide_password">Hide password</string>
 	<string name="show_password">Show password</string>
