minor ui improvements + bug fixes
Signed-off-by: Alessandro Contenti <a.contenti@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,8 +12,8 @@
 	<string name="email">E-mail</string>
 	<string name="password">Password</string>
 	<string name="nickname">Nickname</string>
-	<string name="from_to_dates">From %s to %s</string>
-	<string name="interval_dates">%s - %s</string>
+	<string name="from_to_dates">From %1$s to %2$s</string>
+	<string name="interval_dates">%1$s - %2$s</string>
 	<plurals name="available_copies">
 		<item quantity="zero">Sold</item>
 		<item quantity="one">One copy available</item>
